# dataclod-app

./: .gitignore  Cargo.toml  README.md  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vite.config.ts
.husky/: pre-commit
dataclod-app/: Cargo.toml  tauri.conf.json
dataclod-ui/: package.json  vite.config.ts
src/: App.tsx
src/components/component/: database.tsx
